# chafa-syms-rs

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: publish-release-and-crates-on-tag.yml
crates/chafa-syms/: Cargo.toml
crates/chafa-syms-cli/: Cargo.toml  README.md
crates/chafa-syms-cli/src/: main.rs
crates/chafa-syms-cli/tests/: symbols_help.rs
crates/chafa-syms-rs/: Cargo.toml  README.md
crates/chafa-syms-rs/src/: canvas.rs  color.rs  geometry.rs  lib.rs  palette.rs  pixops.rs  printer.rs  select.rs  smolscale.rs  smolscale_luts.rs  symbol_map.rs  work_cell.rs
crates/chafa-syms-rs/src/symbol/: data.rs  derive.rs  generators.rs  mod.rs  tags.rs
crates/chafa-syms-rs/tests/: determinism.rs  end_to_end_parity.rs  oracle_smoke.rs  printer_parity.rs  scaler_parity.rs  scaling_e2e_parity.rs  selection_parity.rs  symbol_parity.rs  symmap_parity.rs
crates/chafa-syms-rs/tests/support/: mod.rs
crates/chafa-syms/src/: main.rs
devdocs/: PLAN.md
devdocs/oracle/: README.md  chafa-cells-dump.patch
tools/transcode-symbols/: Cargo.toml
tools/transcode-symbols/src/: main.rs
